# learn_kinematics

./: CMakeLists.txt  README.md  package.xml
data/: ClothPlayEE  ClothPlayJA  Explore1EE  Explore1JA  Explore1JT  Explore2EE  Explore2JA  Explore2JT  TestJA  ikin_output.csv
data/gauss/: fkin_trck_output.csv
data/noisy/: fkin_input.csv  ikin_kdl_output.csv  ikin_trck_output.csv
data/test/: all_ikin_kdl_output.csv  ikin_kdl_output.csv  ikin_kdl_output_1.csv  ikin_kdl_output_10.csv  ikin_kdl_output_100.csv  ikin_kdl_output_1000.csv  ikin_kdl_output_150.csv  ikin_kdl_output_180.csv  ikin_kdl_output_190.csv  ikin_kdl_output_195.csv  ikin_kdl_output_200.csv  ikin_kdl_output_5.csv  ikin_kdl_output_50.csv  ikin_kdl_output_500.csv  ikin_kdl_output_800.csv  ikin_kdl_output_gauss_0.csv  ikin_kdl_output_gauss_1.csv  ikin_kdl_output_gauss_2.csv  ikin_kdl_output_gauss_20.csv  ikin_kdl_output_gauss_30.csv  ikin_kdl_output_gauss_5.csv  ikin_kdl_output_noisy_0.csv  ikin_kdl_output_noisy_15.csv  ikin_kdl_output_noisy_20.csv  ikin_kdl_output_noisy_5.csv  ikin_trck_output.csv  ikin_trck_output_1.csv  ikin_trck_output_10.csv  ikin_trck_output_100.csv  ikin_trck_output_1000.csv  ikin_trck_output_150.csv  ikin_trck_output_180.csv  ikin_trck_output_190.csv  ikin_trck_output_195.csv  ikin_trck_output_200.csv  ikin_trck_output_5.csv  ikin_trck_output_50.csv  ikin_trck_output_500.csv  ikin_trck_output_800.csv  ikin_trck_output_gauss_0.csv  (+10 more)
data/trac_ik/: all_fkin_input.csv  all_ikin_kdl_output.csv  all_ikin_trck_output.csv  ikin_kdl_output.csv  ikin_trck_output.csv  terminal_output
include/: fast_kinematics.h  util.h
launch/: compare_ik.launch  fast_kinematics_pub.launch  fast_kinematics_srv.launch  fast_kinematics_test.launch  learn_kinematics_rosconsole.config  move_baxter.launch
nodes/: fast_kinematics_pub.cpp  fast_kinematics_srv.cpp
nodes/tests/: compare_ik.cpp  fast_kinematics_pub_test.cpp  fast_kinematics_srv_test.cpp  fast_kinematics_test.cpp
scripts/: convert.py  fast_kinematics_srv_test.py  fkin.py  fkin2.py  ik_test.py  ikin.py  joint_recorder.py  joint_trajectory_play.py  move_baxter.py  play.py  plot_3d.py  plot_data.py  plot_performance.py
src/: fast_kinematics.cpp  util.cpp
srv/: fast_kinematics_service.srv
