<?xml version="1.0"?>
<package>
  <name>learn_kinematics</name>
  <version>1.0.0</version>
  <description> This package contains the source code for computing inverse kinematics of baxter robot using trac_ik</description>

  <maintainer email="ravi2008joshi@gmail.com">Ravi Joshi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>trac_ik_lib</build_depend>
  <build_depend>fast_kinematics</build_depend>

  <run_depend>trac_ik_lib</run_depend>
  <run_depend>fast_kinematics</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>xacro</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
